# demo

./: README.md
fake_robot/: CMakeLists.txt  package.xml
fake_robot/include/fake_robot/: fake_robot.hpp
fake_robot/launch/: fake_robot_launch.py
fake_robot/params/: fake_robot.yaml
fake_robot/src/: fake_robot.cpp  main.cpp
global_planner/: CMakeLists.txt  package.xml  start_server.sh
global_planner/include/global_planner/: global_planner.hpp
global_planner/include/plugins/hgg_cbs/: cbs.h  config.h  const.h  heuristic.h  map.h  pdtask.h  sipp.h  structs.h  tinyxml2.h  xml_logger.h
global_planner/launch/: real_launch.py  simulation_launch.py
global_planner/maps/ino_3f/: building.yaml  graph_info.yaml  guide_path.yaml  map.yaml  map_server_params.yaml
global_planner/maps/ino_hall_1f/: building.yaml  graph_info.yaml  guide_path.yaml  map_server_params.yaml
global_planner/maps/mobis_warehouse/: building.yaml  graph_info.yaml  guide_path.yaml  map.yaml  map_server_params.yaml
global_planner/maps/yonsei/: building.yaml  graph_info.yaml  guide_path.yaml  map.yaml  map_server_params.yaml
global_planner/maps/yonsei_demo/: building.yaml  graph_info.yaml  guide_path.yaml  map.yaml  map_server_params.yaml
global_planner/params/: global_planner.yaml  global_planner_ino.yaml  global_planner_ino_3f.yaml  global_planner_mobis.yaml  global_planner_yonsei.yaml
global_planner/plugins/hgg_cbs/: cbs.cpp  config.cpp  heuristic.cpp  map.cpp  pdtask.cpp  sipp.cpp  tinyxml2.cpp  xml_logger.cpp
global_planner/rviz/: ino_3f.rviz  mobis_warehouse.rviz  yonsei.rviz
global_planner/src/: global_planner.cpp  main.cpp
local_planner/: CMakeLists.txt  package.xml
local_planner/include/local_planner/: local_planner.hpp
local_planner/launch/: real_launch.py  simulation_launch.py
local_planner/params/: local_planner.yaml
local_planner/src/: local_planner.cpp  main.cpp
logs/: 2025_08_27_1355.yaml  2025_08_27_1420.yaml  2025_08_27_1429.yaml  2025_08_27_1432.yaml  2025_08_27_1438.yaml  2025_08_27_1451.yaml  2025_08_27_1516.yaml  2025_08_27_1542.yaml  2025_08_27_1545.yaml  2025_08_27_1552.yaml  2025_08_27_1605.yaml  2025_08_27_1610.yaml  2025_08_27_1620.yaml  2025_08_27_1623.yaml  2025_08_27_1632.yaml  2025_08_27_1650.yaml  2025_08_27_1657.yaml  2025_08_27_1659.yaml  2025_08_27_1708.yaml  2025_08_27_1726.yaml  2025_08_27_1733.yaml  2025_08_27_1736.yaml  2025_08_27_1751.yaml  2025_08_27_1757.yaml  2025_08_27_1807.yaml  2025_08_27_1813.yaml  2025_08_27_1815.yaml  2025_08_27_1820.yaml  2025_08_27_1827.yaml  2025_08_27_1835.yaml  2025_08_27_1840.yaml  2025_08_27_1844.yaml  2025_08_27_1847.yaml  2025_08_27_2228.yaml  2025_08_27_2235.yaml  2025_08_27_2250.yaml  2025_08_27_2308.yaml  2025_08_27_2318.yaml  2025_08_27_2319.yaml  2025_08_27_2323.yaml  (+3 more)
manual_controller/: CMakeLists.txt  package.xml
manual_controller/include/manual_controller/: manual_controller.hpp
manual_controller/include/plugins/joy/: joy.hpp
manual_controller/include/plugins/keyboard/: keyboard.hpp
manual_controller/launch/: manual_controller_launch.py
manual_controller/params/: manual_controller.yaml
manual_controller/plugins/joy/: joy.cpp
manual_controller/src/: main.cpp  manual_controller.cpp
manual_controller/src/plugins/keyboard/: keyboard.cpp
multirobot_utils/: CMakeLists.txt  package.xml
multirobot_utils/include/multirobot_utils/: DetectConflict.hpp  DetectConflictInternal.hpp  Motion.hpp  MotionInternal.hpp  Profile.hpp  ProfileInternal.hpp  Spline.hpp  StaticMotion.hpp  Time.hpp  Trajectory.hpp  TrajectoryInternal.hpp  debug_Trajectory.hpp  impl_ptr.hpp  invalid_trajectory_error.hpp  optional.hpp  structs.hpp  velocity_profile.hpp
multirobot_utils/include/multirobot_utils/geometry/: Box.hpp  Circle.hpp  ConvexShape.hpp  Shape.hpp  ShapeInternal.hpp  SimplePolygon.hpp  Space.hpp
multirobot_utils/src/: DetectConflict.cpp  Motion.cpp  Profile.cpp  Spline.cpp  StaticMotion.cpp  Time.cpp  Trajectory.cpp  structs.cpp  velocity_profile.cpp
multirobot_utils/src/geometry/: Box.cpp  Circle.cpp  ConvexShape.cpp  Shape.cpp  SimplePolygon.cpp  Space.cpp
real_robot/: CMakeLists.txt  package.xml
real_robot/arduino_firmware/: Controller.cpp  Controller.h  EasyTransfer2.cpp  EasyTransfer2.h  EncoderCounter.cpp  EncoderCounter.h  isr_m2_arduino_firmware.ino
real_robot/include/real_robot/: real_robot.hpp
real_robot/launch/: m2_launch.py
real_robot/params/: amcl.yaml  m2.yaml
real_robot/src/: main.cpp  real_robot.cpp
robot_controller/: CMakeLists.txt  package.xml
robot_controller/include/plugins/rmse_logger/: rmse_logger.hpp
robot_controller/include/robot_controller/: robot_controller.hpp
robot_controller/launch/: robot_controller_launch.py
robot_controller/params/: robot_controller.yaml
robot_controller/plugins/rmse_logger/: rmse_logger.cpp
robot_controller/src/: main.cpp  robot_controller.cpp
ros2_interfaces/: CMakeLists.txt  package.xml
ros2_interfaces/msg/: RobotStatus.msg
