<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>real_robot</name>
  <version>0.0.0</version>
  <description>Real Robot Driver for MultiRobotSystem</description>
  <maintainer email="janismoon@korea.ac.kr">janismoon</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_msgs</depend>
  <depend>ros2_interfaces</depend>
  <depend>multirobot_utils</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
